<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Categoria">

    <ImageView
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:src="@drawable/img_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="152dp"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/imagelogo12" />


    <Button
        android:id="@+id/btn4"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="204dp"
        android:backgroundTint="@color/amarillocame"
        android:text="@string/boton4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/amarillocame"
        android:text="@string/boton5"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="350dp"
        android:layout_height="72dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/amarillocame"
        android:text="@string/boton6"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

</androidx.constraintlayout.widget.ConstraintLayout>